fix: align content in header

--- a/online-zoo/pages/zoos-map/zoos-map.css
+++ b/online-zoo/pages/zoos-map/zoos-map.css
@@ -321,11 +321,11 @@ header {
   }
   .nav-wrapper img {
     width: 40px;
-    margin-right: 83px;
+    margin-right: 73px;
   }
   .nav-wrapper nav {
-    margin-left: 89px;
-    margin-top: 4px;
+    margin-left: 73px;
+    margin-top: 0;
   }
   .nav-wrapper nav ul {
     width: 678px;
